--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
             exit 1
           fi
           
-          # Setup Swap (12GB) - Critical for stability
+          # Setup Swap (12GB) - Critical
           sudo swapoff -a
           sudo rm -f /swapfile
           sudo fallocate -l 12G /swapfile
@@ -116,7 +116,7 @@ jobs:
             git wget curl python3 python3-pip zip unzip tar 7zip \
             brotli lz4 openjdk-17-jdk \
             liblz4-tool e2fsprogs device-tree-compiler build-essential zlib1g-dev \
-            erofs-utils
+            erofs-utils rsync
           
           # Install Python protobuf
           pip3 install --upgrade pip protobuf
@@ -137,7 +137,6 @@ jobs:
           echo "Installing Payload Dumper..."
           wget -q https://github.com/ssut/payload-dumper-go/releases/download/1.2.2/payload-dumper-go_1.2.2_linux_amd64.tar.gz
           tar -zxf payload-dumper-go_1.2.2_linux_amd64.tar.gz
-          # Robust find to locate binary
           find . -type f -name "payload-dumper-go" -exec chmod +x {} \;
           find . -type f -name "payload-dumper-go" -exec mv {} . \; || true
           
@@ -180,7 +179,6 @@ jobs:
           if grep -q "payload.bin" content.txt; then
             echo "Format: Payload.bin"
             unzip firmware.zip payload.bin
-            # Call payload-dumper-go
             PD_TOOL="../../tools/payload-dumper-go"
             if [ ! -f "$PD_TOOL" ]; then
               PD_TOOL=$(find ../../tools -name payload-dumper-go -type f | head -n 1)
@@ -217,7 +215,7 @@ jobs:
           git clone "${{ inputs.vendor_tree_url }}" vendor/xiaomi/miatoll
           git clone "${{ inputs.kernel_tree_url }}" kernel/xiaomi/miatoll
 
-      - name: 5. Prepare Images (Fixed Batch Copy)
+      - name: 5. Prepare Images (Simple Rsync Loop)
         working-directory: ./build
         run: |
           set -e
@@ -239,9 +237,9 @@ jobs:
               if [[ "$FS_TYPE" == "EROFS" ]] || [[ "$FS_TYPE" == "Linux" ]]; then
                  echo "EROFS detected. Converting to EXT4..."
                  
-                 # 1. Create Target EXT4 Image
+                 # 1. Create Target EXT4 Image (+1.5GB buffer for edits)
                  ORIG_SIZE=$(stat -c%s "$IMG")
-                 NEW_SIZE=$(($ORIG_SIZE + 1073741824)) # +1GB buffer
+                 NEW_SIZE=$(($ORIG_SIZE + 1610612736))
                  dd if=/dev/zero of="${PART}_ext4.img" bs=1 count=0 seek=$NEW_SIZE
                  mkfs.ext4 -F "${PART}_ext4.img"
                  
@@ -251,29 +249,39 @@ jobs:
                  # 3. Mount Target (EXT4)
                  sudo mount -o loop,rw "${PART}_ext4.img" "$MNT"
                  
-                 # 4. ROBUST BATCH COPY
-                 echo "Starting Copy..."
+                 # 4. SAFE COPY LOOP (No OOM, Permissions Handled)
+                 echo "Starting Safe Copy..."
                  cd temp_mount_src
                  
-                 # A. Replicate Directory Structure (Sudo needed)
-                 echo "--> Replicating directories..."
-                 sudo find . -type d -print0 | xargs -0 -r -I {} sudo mkdir -p "../$MNT/{}"
-                 
-                 # B. Copy Files in Batches (Sudo needed)
-                 echo "--> Copying files in batches..."
-                 sudo find . -type f -o -type l -print0 | xargs -0 -r -n 50 sh -c 'sudo cp -aP --parents -t "../'"$MNT"'" "$@" && sync' _
-                 
+                 # Loop through top-level items to avoid reading full tree into RAM
+                 for ITEM in *; do
+                   if [ -e "$ITEM" ]; then
+                     echo "--> Copying $ITEM..."
+                     # Use rsync for reliability. 
+                     # -a: archive (perms, symlinks)
+                     # --info=progress2: show progress
+                     # --no-inc-recursive: save RAM on huge file lists
+                     sudo rsync -a --no-inc-recursive "$ITEM" "../$MNT/"
+                     
+                     # Force flush RAM to disk
+                     sudo sync
+                   fi
+                 done
                  cd ..
                  
-                 # 5. Cleanup
+                 # 5. Verify Content
+                 SIZE_CHECK=$(sudo du -sh "$MNT" | cut -f1)
+                 echo "Copied size: $SIZE_CHECK"
+                 
+                 # 6. Cleanup
                  sudo umount temp_mount_src
                  sudo umount "$MNT"
                  
-                 # 6. Swap images
+                 # 7. Swap
                  rm "$IMG"
                  mv "${PART}_ext4.img" "$IMG"
                  
-                 # 7. Remount for editing
+                 # 8. Remount
                  sudo mount -o loop,rw "$IMG" "$MNT"
                  
               else
@@ -282,6 +290,14 @@ jobs:
                  e2fsck -f -y "$IMG" || true
                  resize2fs "$IMG"
                  sudo mount -o loop,rw "$IMG" "$MNT"
+              fi
+              
+              # FINAL CHECK: If mount is empty, FAIL IMMEDIATELY
+              USED_SPACE=$(sudo du -s "$MNT" | awk '{print $1}')
+              # 50000 blocks ~ 50MB. System should be > 500MB usually.
+              if [ "$USED_SPACE" -lt 50000 ]; then
+                 echo "::error::Partition $PART seems empty ($USED_SPACE blocks). Copy failed!"
+                 exit 1
               fi
             fi
           }
@@ -316,7 +332,6 @@ jobs:
           "
           
           for APP in $APPS_TO_REMOVE; do
-             # Check with sudo because of permissions
              if sudo test -d "$APP"; then
                echo "Removing $APP"
                sudo rm -rf "$APP"
@@ -339,7 +354,6 @@ jobs:
           
           # 2. Patch build.prop (Sudo Find & Sed)
           echo "Patching props..."
-          # Find files owned by root requires sudo
           sudo find $PORT -name "build.prop" | while read prop; do
             echo "Patching $prop"
             sudo sed -i 's/^ro.product.device=.*/ro.product.device=miatoll/' "$prop"
@@ -367,7 +381,7 @@ jobs:
           if [ ! -z "$JAR_PATH" ]; then
             echo "Found services.jar at: $JAR_PATH"
             
-            # Copy OUT from root-owned mount to user temp file
+            # Copy OUT
             sudo cp "$JAR_PATH" services.jar
             sudo chmod 666 services.jar
             
@@ -380,10 +394,10 @@ jobs:
             echo "Recompiling..."
             java -jar $TOOLS/smali.jar a services_out -o classes.dex
             
-            # Update the jar (user owned copy)
+            # Update the jar
             zip -u services.jar classes.dex
             
-            # Copy IN back to root-owned mount
+            # Copy IN
             sudo cp services.jar "$JAR_PATH"
             
             # Cleanup
@@ -398,10 +412,9 @@ jobs:
         run: |
           set -e
           echo "::group::Building Images"
-          # FIX: Use correct local folder for output to match Step 10
+          # Correct output directory
           OUT_DIR="output"
           mkdir -p $OUT_DIR
-          # Ensure output dir is writable 
           sudo chmod 777 $OUT_DIR
           
           finalize_image() {
@@ -419,7 +432,7 @@ jobs:
                sudo e2fsck -f -y "$IMG" || true
                sudo resize2fs -M "$IMG"
                
-               # 3. Convert to sparse (Must use sudo)
+               # 3. Convert to sparse
                echo "Converting to sparse..."
                sudo img2simg "$IMG" "$OUT_DIR/$PART.img"
             fi
@@ -436,7 +449,6 @@ jobs:
         working-directory: ./build/output
         run: |
           set -e
-          # Fix ownership so current user can zip them
           echo "Fixing permissions..."
           sudo chown -R $USER:$USER .
           ls -lh
